# narchyrust

./: ANALYSIS.md  Cargo.toml  PLAN.md  PRIORITIZED_COMPONENTS.md  TRANSLATION_PLAN.md  cleanup.sh  run_tests.sh
resources/: cond.decompose.wouldve.nal  impl.decompose.self.nal  impl.syl.cond.nal  impl.syl.nal  rules.nal
src/: lib.rs  main.rs  time.rs
src/bag/: mod.rs
src/concept/: mod.rs  util.rs
src/control/: budget.rs  deriver_exec.rs  mod.rs
src/deriver/: brute_force.rs  mod.rs  rule.rs  rule_based.rs  syllogistic.rs
src/deriver/reaction/: compiler.rs  mod.rs
src/focus/: focus.rs  focus_bag.rs  mod.rs  pri_tree.rs  util.rs
src/memory/: mod.rs  radix_tree.rs  simple.rs
src/memory/serial/: mod.rs  radix_tree.rs
src/nal/: deriver.rs  mod.rs  nar.rs  truth_functions.rs  unify.rs
src/nal/inference/: mod.rs  test_deduction.rs  test_truth.rs  truth.rs
src/parser/: mod.rs  narsese.pest
src/table/: mod.rs
src/task/: mod.rs
src/term/: atom.rs  compound.rs  mod.rs  var.rs
src/truth/: mod.rs
